--- a/index.html
+++ b/index.html
@@ -34,6 +34,21 @@
   <button id="btn">compute</button> 
 
   <p id="result"></p>
+  <p>
+    Insert the information in the form and the calculator will determine the heat transfer<br> 
+    What is the heat transfer?<br>
+    The heat transfer is a describtion of the kinetics of energy storage, transport and energy transformation by principal energy carries phonons, electrons, fluid particles and photons.<br>
+    How to calculate heat transfer?<br>
+    To calculate heat transfer you should use the following formula:<br>
+    Q = m * c * ΔT<br>
+    where:<br>
+    Q = heat transferred<br>
+    m = mass<br>
+    c = specific heat<br>
+    ΔT = difference in temperature<br>
+    Why use heat transfer?<br>
+    The heat transfer is used in order to preserve, increase or decrease the temperature in a wide variety of circumstances.<br>
+</p>
   <script src="app.js"></script>
 </body>
 </html>
